[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aocf = { version = "0.1.21", features = ["html_parsing"] }
failure = "0.1.8"
itertools = "0.12.0"
nom = "7.1.3"
priority-queue = "1.3.2"
structopt = "0.3.26"
